objects/NGCC_Suppressed_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Active_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Suppressed Leads</relationshipLabel>
        <relationshipName>Active_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medium_Type__c</fullName>
        <formula>Text(Suppressed_Lead__r.Medium_Type__c)</formula>
        <label>Medium Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suppressed Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Active Leads</relationshipLabel>
        <relationshipName>Suppressed_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppression_Reason__c</fullName>
        <formula>Suppressed_Lead__r.Suppression_Reason__c</formula>
        <label>Suppression Reason</label>
        <type>Text</type>
    </fields>
    <label>Suppressed Lead</label>
    <nameField>
        <displayFormat>SP Lead {00000000}</displayFormat>
        <label>Suppressed Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppressed Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>